--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Law &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Blogs &mdash; Legal Admirers</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -61,7 +61,19 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	<style>
+		.coming-soon-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			font-family: Arial, sans-serif;
+			font-size: 36px;
+			font-weight: bold;
+			color: #333;
+			text-align: center;
+		  }
+	</style>
 	</head>
 	<body>
 		
@@ -73,26 +85,26 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Legal <span>Admirers</span></a></div>
+						<div id="fh5co-logo"><img src="./images/logo9.png"></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="./courses.html">Courses</a></li>
-							<li><a href="./team.html">Team</a></li>
+							<li><a href="./team.html">Opportuinities</a></li>
 							<li class="has-dropdown active">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
-									<li><a href="#">Cases</a></li>
-									<li><a href="#">Won Cases</a></li>
-									<li><a href="#">Criminal Law</a></li>
-									<li><a href="#">Business Law</a></li>
+									<!-- <li><a href="#">Cases</a></li> -->
+									<!-- <li><a href="#">Won Cases</a></li> -->
+									<!-- <li><a href="#">Criminal Law</a></li> -->
+									<!-- <li><a href="#">Business Law</a></li> -->
 								</ul>
 							</li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
-							<li class="btn-cta"><a href="#"><span>Sign Up</span></a></li>
+							<!-- <li class="btn-cta"><a href="#"><span>Login</span></a></li> -->
+							<!-- <li class="btn-cta"><a href="#"><span>Sign Up</span></a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -109,8 +121,8 @@
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner desc">
-		   					<h2 class="heading-section">Blog</h2>
-		   					<p class="fh5co-lead">Designed with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
+		   					<h2 class="heading-section">Blogs</h2>
+		   					<p class="fh5co-lead">Gets all the <i class="icon-heart3"></i> blogs from the <a href="" target="_blank">legal admirers</a></p>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -119,116 +131,25 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-blog" class="fh5co-bg-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-4.jpg" alt=""></a>
-						<div class="blog-text">
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<h3><a href="#">Legal Consultation</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-2.jpg" alt=""></a>
-						<div class="blog-text">
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<h3><a href="#">Criminal Case</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-3.jpg" alt=""></a>
-						<div class="blog-text">
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<h3><a href="#">Business Law</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-1.jpg" alt=""></a>
-						<div class="blog-text">
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<h3><a href="#">Legal Consultation</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-7.jpg" alt=""></a>
-						<div class="blog-text">
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<h3><a href="#">Criminal Case</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#"><img class="img-responsive" src="images/project-6.jpg" alt=""></a>
-						<div class="blog-text">
-							<span class="posted_on">Nov. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<h3><a href="#">Business Law</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<a href="#" class="btn btn-primary">Read More</a>
-						</div> 
-					</div>
-				</div>
-			</div>
+	<div class="container">
+		<div class="coming-soon-container">
+		  <p>Coming Soon!</p>
 		</div>
-	</div>
+	  </div>
 
 
-	<div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Legal Advice</h2>
-					<p>We help people effectively fight their offenders back and successfully defend their own stand!</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<p><a href="#" class="btn btn-default btn-lg">Consultation</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-3 fh5co-widget">
-					<h4>Attorney's Law</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-				</div>
+				
 				<div class="col-md-3 col-md-push-1">
 					<h4>Navigation</h4>
 					<ul class="fh5co-footer-links">
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./courses.html">Courses</a></li>
-						<li><a href="./team.html">Team</a></li>
+						<li><a href="./team.html">Opportuinities</a></li>
 						<li><a href="./blog.html">Blog</a></li>
 						<li><a href="./about.html">About us</a></li>
 					</ul>
@@ -237,21 +158,14 @@
 				<div class="col-md-3 col-md-push-1">
 					<h4>Contact Information</h4>
 					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
+						<li>Panchvati Nagar <br> Gwalior </li>
+						<li><a href="tel://9755625509">+ 91 975-562-5509 </a></li>
 						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
+						
 					</ul>
 				</div>
 
-				<div class="col-md-3 col-md-push-1">
-					<h4>Opening Hours</h4>
-					<ul class="fh5co-footer-links">
-						<li>Mon - Thu: 9:00 - 21 00</li>
-						<li>Fri 8:00 - 21 00</li>
-						<li>Sat 9:30 - 15: 00</li>
-					</ul>
-				</div>
+			
 
 			</div>
 
