--- a/blog.html
+++ b/blog.html
@@ -131,12 +131,58 @@
 	  	</div>
 	</aside>
 
-	<div class="container">
-		<div class="coming-soon-container">
-		  <p>Coming Soon!</p>
+	<div id="fh5co-blog" class="fh5co-bg-section">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Recent Post</h2>
+					<p>Go through our latest Blogs.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#"><img class="img-responsive" src="images/project-4.jpg" alt=""></a>
+						<div class="blog-text">
+							<span class="posted_on">aug 5th.</span>
+							<span class="comment"><a href=""><i class="icon-speech-bubble"></i></a></span>
+							<h3><a href="#">National green tribunal </a></h3>
+							<p>NATIONAL GREEN TRIBUNAL: THE ENVIRONMENT COURT OF INDIA
+								‘[T]he NGT is one of the world’s most progressive Tribunals … the procedures
+								adopted, powers assumed, and remedies employed by the NGT are notable1
+								’.
+								-Ceri Warnock.</p>
+							<a href="https://drive.google.com/file/d/1dgUB1dJSApxuFnw01EGY48JsLsyNUWC1/view?usp=drivesdk" class="btn btn-primary">Read More</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#"><img class="img-responsive" src="images/project-2.jpg" alt=""></a>
+						<div class="blog-text">
+							<span class="posted_on">aug 5th</span>
+							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
+							<h3><a href="#">Constutional Amendments and Law under article 13</a></h3>
+							<p>Article 13 of the Constitution is a significant provision that governs the process of amending the Constitution itself. It outlines the procedure through which contains.....</p>
+							<a href="https://docs.google.com/file/d/1aThvsOWPli35AnaZQcxXOlhPKML1VomJ/edit?usp=docslist_api&filetype=msword" class="btn btn-primary">Read More</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="#"><img class="img-responsive" src="images/project-3.jpg" alt=""></a>
+						<div class="blog-text">
+							<span class="posted_on">aug 5th</span>
+							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
+							<h3><a href="#">South China sea dispute</a></h3>
+							<p>The South China Sea Dispute is a territorial dispute between several countries in the South China Sea. China, Philippines, Vietnam, Malaysia, Taiwan, Indonesia and Brunei all have overlapping claims over t.</p>
+							<a href="https://docs.google.com/file/d/1MN1GqhTeSzg4VNokqj2b3EaFpUiCyWSY/edit?usp=docslist_api&filetype=msword" class="btn btn-primary">Read More</a>
+						</div> 
+					</div>
+				</div>
+			</div>
 		</div>
-	  </div>
-
+	</div>
 
 	
 
