--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 				<div class="row">
 					<div class="col-xs-2">
 						
-						<div id="fh5co-logo"><img src="./images/logo9.png"></div>
+						<div id="fh5co-logo"><img src="./images/FINAL-removebg-preview.png"></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
