--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,7 @@
 						<ul>
 							<li class="address">Panchwati Nagar, <br> Gwalior, Madhya Pradesh</li>
 							<li class="phone"><a href="tel://9755625509">+ 91 9755625509</a></li>
+							<li class="email"><a href="thelegaladmirers@gmail.com">thelegaladmirers@gmail.com</a></li>
 							
 						</ul>
 					</div>
@@ -201,7 +202,7 @@
 					<ul class="fh5co-footer-links">
 						<li>Panchvati Nagar <br> Gwalior </li>
 						<li><a href="tel://9755625509">+ 91 975-562-5509 </a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
+						<li><a href="thelegaladmirers@gmail.com">thelegaladmirers@gmail.com</a></li>
 						
 					</ul>
 				</div>
