--- a/about.html
+++ b/about.html
@@ -294,7 +294,7 @@
 					<ul class="fh5co-footer-links">
 						<li>Panchvati Nagar <br> Gwalior </li>
 						<li><a href="tel://9755625509">+ 91 975-562-5509 </a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
+						<li><a href="mailto:thelegaladmirers@gmail.com">thelegaladmirers@gmail.com</a></li>
 						
 					</ul>
 				</div>
