--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
 			   					<h1>Boost Career Opportuinities</h1>
-									<h2>With the upcoming <a href="./team.html" target="_blank">Opportuinities</a></h2>
+									<h2>With the upcoming <a href="https://he1.me/3BZCK" target="_blank">Opportuinities</a></h2>
 									
 			   				</div>
 			   			</div>
