--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="./courses.html">Courses</a></li>
-							<li><a href="./team.html">Opportuinities</a></li>
+							<li><a href="https://he1.me/3BZCK">Opportuinities</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
