--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="./courses.html">Courses</a></li>
-							<li><a href="./team.html">Opportuinities</a></li>
+							<li><a href="https://he1.me/3BZCK">Opportuinities</a></li>
 							<li class="has-dropdown active">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
