--- a/index.html
+++ b/index.html
@@ -79,15 +79,10 @@
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="courses.html">Courses</a></li>
-							<li><a href="https://he1.me/3BZCK">Opportuinities</a></li>
+							<li><a href="https://bloglegaladmirers.wordpress.com/" target="_blank">Opportuinities</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
+								
 							</li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
