--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 					<ul class="fh5co-footer-links">
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./courses.html">Courses</a></li>
-						<li><a href="https://he1.me/3BZCK">Opportuinities</a></li>
+						<li><a href="https://bloglegaladmirers.wordpress.com/" target="_blank">Opportuinities</a></li>
 						<li><a href="./blog.html">Blog</a></li>
 						<li><a href="./about.html">About us</a></li>
 					</ul>
