--- a/courses.html
+++ b/courses.html
@@ -94,7 +94,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="courses.html">Courses</a></li>
-							<li><a href="https://he1.me/3BZCK">Opportuinities</a></li>
+							<li><a href="https://bloglegaladmirers.wordpress.com/" target="_blank">Opportuinities</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -136,7 +136,7 @@
 					<ul class="fh5co-footer-links">
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./courses.html">Courses</a></li>
-						<li><a href="https://he1.me/3BZCK">Opportuinities</a></li>
+						<li><a href="https://bloglegaladmirers.wordpress.com/" target="_blank">Opportuinities</a></li>
 						<li><a href="./blog.html">Blog</a></li>
 						<li><a href="./about.html">About us</a></li>
 					</ul>
